base-apps/whoami-test/deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whoami-test
  namespace: whoami-test
  labels:
    app: whoami-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: whoami-test
  template:
    metadata:
      labels:
        app: whoami-test
    spec:
      containers:
        - name: whoami-test
          image: traefik/whoami
          ports:
            - name: http
              containerPort: 80
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 256Mi
          readinessProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
