base-apps/whoami-test/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: whoami-test
  namespace: whoami-test
  labels:
    app: whoami-test
spec:
  type: ClusterIP
  selector:
    app: whoami-test
  ports:
    - name: http
      port: 80
      targetPort: 80
