base-apps/whoami-test/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: whoami-http
  namespace: whoami-test
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`whoami.arigsela.com`)
      kind: Rule
      services:
        - name: whoami
          port: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: whoami-https
  namespace: whoami-test
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`whoami.arigsela.com`)
      kind: Rule
      services:
        - name: whoami
          port: 80
  tls:
    secretName: whoami-tls
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-to-https
  namespace: whoami-test
spec:
  redirectScheme:
    scheme: https
    permanent: true
